<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movie_title">Film</string>
    <string name="tv_show_title">Acara TV</string>
    <string name="favorite">Disukai</string>
    <string name="movie_poster">Gambar Film</string>
    <string name="rating">Peringkat :</string>
    <string name="release_date">Rilis :</string>
    <string name="description">Deskripsi</string>
    <string name="setting">Pengaturan</string>
    <string name="save">ditambahkan ke daftar disukai</string>
    <string name="remove">dihapus dari favorite</string>
    <string name="appwidget_text">Film favorit anda</string>
    <string name="add_widget">Tambah widget</string>
    <string name="search_movie">Pencarian Movie</string>
    <string name="not_found">Data Kosong</string>
    <string name="locale">Pengaturan Bahasa</string>
    <string name="notification">Pengaturan Notifikasi</string>

    <string name="reminder_daily">reminder_daily</string>
    <string name="reminder_upcoming">reminder_upcoming</string>
    <string name="label_daily_reminder_on">Notifikasi Pengingat Harian Aktif</string>
    <string name="label_daily_reminder_off">Notifikasi Pengingat Harian Tidak Aktif</string>
    <string name="label_upcoming_reminder_on">Notifakasi Film Terbaru Aktif</string>
    <string name="label_upcoming_reminder_off">Notifakasi Film Terbaru Tidak Aktif</string>
    <string name="summary_daily_reminder">Aktif/Non Aktif notifikasi pengingat harian</string>
    <string name="summary_upcoming_reminder">Aktif/Non Aktif notifikasi film terbaru</string>
    <string name="title_daily_reminder">Notifikasi Pengingat Harian</string>
    <string name="title_upcoming_reminder">Notifikasi Film Terbaru</string>
    <string name="key_setting_locale">localization</string>
    <string name="summary_locale">Pilih untuk pengaturan Bahasa</string>
    <string name="title_locale">Ubah Bahasa</string>

</resources>
