<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_movie"
            android:enabled="true"
            android:icon="@drawable/ic_movie_white_24dp"
            android:title="@string/movie_title"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_tv_show"
            android:enabled="true"
            android:icon="@drawable/ic_tv_white_24dp"
            android:title="@string/tv_show_title"
            app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>

</menu>