<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        tools:context=".activity.DetailMovieActivity"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

        <ImageView
                android:id="@+id/iv_thumbnail_detail_big"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/poster_spiderman"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/movie_poster"/>

        <View
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@android:color/black"
                android:alpha="0.4"
                app:layout_constraintHorizontal_bias="0.0" android:id="@+id/view"/>


        <androidx.cardview.widget.CardView
                android:id="@+id/civ_thumbnail_details"
                android:layout_width="150dp"
                android:layout_height="220dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail_detail_big"
                app:layout_constraintBottom_toBottomOf="@+id/iv_thumbnail_detail_big"
                app:layout_constraintEnd_toEndOf="@id/tv_name_movie"
                app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintVertical_bias="0.322">

            <ImageView
                    android:id="@+id/iv_thumbnail_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/poster_spiderman"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/movie_poster"
            />

        </androidx.cardview.widget.CardView>

        <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_favorite_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="128dp"
                android:layout_marginRight="128dp"
                app:layout_constraintStart_toEndOf="@+id/tv_name_movie"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/view"
                android:contentDescription="@string/app_name"
                app:layout_constraintHorizontal_bias="0.294"
                app:layout_constraintVertical_bias="0.979"/>

        <TextView
                android:id="@+id/tv_name_movie"
                android:textStyle="bold"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                tools:text="The Walking Dead"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/iv_thumbnail_detail_big"
                app:layout_constraintStart_toEndOf="@id/civ_thumbnail_details"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"/>

        <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toEndOf="@id/civ_thumbnail_details"
                app:layout_constraintTop_toBottomOf="@id/tv_name_movie"
        />


        <TextView
                android:id="@+id/tv_rating_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="7.8"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/tv_name_movie"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
        />


        <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="15sp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/rating"
                app:layout_constraintStart_toEndOf="@id/civ_thumbnail_details"
        />

        <TextView
                android:id="@+id/tv_relase_date_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                tools:text="1990-10-07"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/duration"
                app:layout_constraintTop_toBottomOf="@id/rating"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
        />

        <View
                android:id="@+id/sperator"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/civ_thumbnail_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/separator_2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sperator"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/sperator"
                android:id="@+id/separator_2"
                app:layout_constraintEnd_toEndOf="@id/tv_description_details"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_description_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/separator_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
